deployments/backstage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
  labels:
    app: backstage
spec:
  selector:
    app: backstage
  ports:
  - name: http
    port: 7007
    targetPort: http
